# StellarQtSDK

./: CMakeLists.txt
src/: CMakeLists.txt  checkaccountrequiresmemo.cpp
src/requests/: accountsrequestbuilder.cpp  accountsrequestbuilder.h
src/responses/: traderesponse.h
test/: CMakeLists.txt  testcollector.h
xdr/: CMakeLists.txt
